modules/vpc/vpc.tf
# Create vpc 
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
     Name = "${var.application_name}-vpc"
  }
}

# Create public subnets
resource "aws_subnet" "public_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "ap-southeast-2a"

  tags = {
    Name = "${var.application_name}-public-1"
  }
}

resource "aws_subnet" "public_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "ap-southeast-2b"

  tags = {
    Name = "${var.application_name}-public-2"
  }
}

# Create private subnets, nat gateways with elastic ips
resource "aws_subnet" "private_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.3.0/24"
  availability_zone = "ap-southeast-2a"

  tags = {
    Name = "${var.application_name}-private-1"
  }
}

# resource "aws_subnet" "private_2" {
#   vpc_id            = aws_vpc.main.id
#   cidr_block        = "10.0.4.0/24"
#   availability_zone = "ap-southeast-2b"

#   tags = {
#     Name = "${var.application_name}-private-2"
#   }
# }

# Create NAT Gateway with an associated Elastic IP
resource "aws_eip" "eip_1" {
  vpc = true

  tags = {
    Name = "${var.application_name}-nat-eip-1"
  }
}

resource "aws_nat_gateway" "nat_1" {
  allocation_id = aws_eip.eip_1.id
  subnet_id     = aws_subnet.public_1.id

  tags = {
    Name = "${var.application_name}-nat-gateway-1"
  }
}

# # NAT Gateway #2
# resource "aws_eip" "nat_2" {
#   vpc = true

#   tags = {
#     Name = "terraform-nat-eip-2"
#   }
# }

# resource "aws_nat_gateway" "nat_2" {
#   allocation_id = aws_eip.nat_2.id
#   subnet_id     = aws_subnet.public_2.id

#   tags = {
#     Name = "terraform-nat-gateway-2"
#   }
# }

# Create internet gateway attached in vpc
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.application_name}-igw"
  }
}


### Route Tables
# Public route table - reuse the default one
resource "aws_default_route_table" "default_rt"{
  default_route_table_id = aws_vpc.main.default_route_table_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${var.application_name}-public-rt"
  }
}

# Private route tables
resource "aws_route_table" "private_1" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_1.id
  }

  tags = {
    Name = "${var.application_name}-private-rt"
  }
}

# Associate private route 1 table with private subnet 1
resource "aws_route_table_association" "private_1" {
  subnet_id = aws_subnet.private_1.id
  route_table_id = aws_route_table.private_1.id
}

# # Create private Route Tables 2 and route to nat gateway 2
# resource "aws_route_table" "private_2" {
#   vpc_id = aws_vpc.main.id

#    route {
#       cidr_block = "0.0.0.0/0"
#       nat_gateway_id = aws_nat_gateway.nat_2.id
#   }

#     tags = {
#       Name = "terraform-private-2-routetable"
#    }
# }

# # Associate private route 2 table with private subnet 2
# resource "aws_route_table_association" "private_2" {
#   subnet_id = aws_subnet.private_2.id
#   route_table_id = aws_route_table.private_2.id
# }
